# catch-the-bunny

./: .headache.dirs  .ocamlformat  CHANGELOG.md  CHANGES.md  COPYING.HEADER  README.md  bunny.opam  catch-the-bunny-dev.opam  catch-the-bunny-tests.opam  catch-the-bunny.opam  dune-project  dune-workspace  dune-workspace-5.5  dunolint  index.html
.github/: install-depexts.sh
.github/workflows/: ci.yml  deploy-odoc.yml  dune-pkg-ci.yml  dune-pkg-more-ci.yml  dune.yml  more-ci.yml
bunny/: index.html
bunny/Bunny/: index.html
bunny/Bunny/Automaton/: index.html
bunny/Bunny/Automaton/Solution/: index.html
bunny/Bunny/Automaton/Step/: index.html
bunny/Bunny/Status_line/: index.html
catch-the-bunny/: db.js  index.html
catch-the-bunny/Catch_the_bunny/: index.html
catch-the-bunny/Catch_the_bunny/Automaton/: index.html
catch-the-bunny/Catch_the_bunny/Automaton/Solution/: index.html
catch-the-bunny/Catch_the_bunny/Automaton/Step/: index.html
catch-the-bunny/Catch_the_bunny/Status_line/: index.html
dune.lock/: bitv.2.1.pkg  brr.0.0.8.pkg  crunch.4.0.0.pkg  fix.20250919.pkg  js_of_ocaml-toplevel.6.2.0.pkg  lock.dune  ocaml-compiler.5.3.0.pkg  ocaml-version.4.0.3.pkg  ocamlformat-lib.0.28.1.pkg  ocamlformat.0.28.1.pkg  ocp-indent.1.9.0.pkg  odoc-parser.3.1.0.pkg  odoc.3.1.0.pkg  ppx_blob.0.9.0.pkg  sherlodoc.3.1.0.pkg  tyxml.4.6.0.pkg  uucp.17.0.0.pkg  uuseg.17.0.0.pkg
pkg/catch-the-bunny/: status_line.mli
pkg/catch-the-bunny/stdlib/: code_error.mli  dune
src/: automaton.ml  automaton.mli  bunny.ml  bunny.mli  dune  status_line.ml  status_line.mli
src/stdlib/: catch_the_bunny_stdlib.mli
stdlib/src/: catch_the_bunny_stdlib.ml  catch_the_bunny_stdlib.mli  code_error.ml  dune  dyn0.ml  dyn0.mli
stdlib/test/: dune  test__expect.ml
test/: dune  test__automaton.ml  test__bunny.ml  test__status_line.ml  test__status_line.mli
test/catch-the-bunny/stdlib/: test__expect.ml
test/stdlib/: dune
