opam-version: "2.0"
synopsis: "Resolving a small logic puzzle"
description: "Resolving a small logic puzzle"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/bunny"
doc: "https://github.com/mbarbin/bunny"
bug-reports: "https://github.com/mbarbin/bunny/issues"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.11"}
  "bisect_ppx" {dev & >= "2.8"}
  "base" {>= "v0.16"}
  "expect_test_helpers_core" {with-test & >= "v0.16"}
  "ppx_jane" {>= "v0.16"}
  "ppx_js_style" {>= "v0.16"}
  "stdio" {with-test >= "v0.16"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/bunny.git"
