(library
 (name catch_the_bunny)
 (public_name catch-the-bunny)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Catch_the_bunny_stdlib)
 (libraries bitv catch_the_bunny_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
