(library
 (name catch_the_bunny_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base
  -open
  Catch_the_bunny)
 (libraries
  base
  catch_the_bunny
  expect_test_helpers_core.expect_test_helpers_base)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
