(library
 (name catch_the_bunny_test)
 (public_name catch-the-bunny-tests.catch_the_bunny_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Catch_the_bunny_stdlib
  -open
  Catch_the_bunny)
 (libraries catch_the_bunny catch_the_bunny_stdlib)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect_nobase)))
