(library
 (name catch_the_bunny_stdlib_test)
 (package catch-the-bunny-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Catch_the_bunny_stdlib)
 (libraries catch_the_bunny_stdlib)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
